# appointmentChat

./: .gitignore  README.md  a.py  app.py  main.py  pyproject.toml  requirements.txt  resultados_backend.json  setup.py
Tests/: ValoresFronteira.py
src/: app.py  main.py  registry.py
src/Api/: chatController.py
src/Application/Abstractions/: BaseAgent.py  BaseHandler.py  HandlerFactory.py  Registry.py
src/Application/Fallback/: FallbackAgentConfig.py
src/Application/Get_Random_Patient/: GetRandomPatientConfig.py  GetRandomPatientHandler.py
src/Application/Router/: RouterAgentConfig.py  RouterAgentHandler.py
src/Application/Sintomas/: SintomasAgentConfig.py  SintomasAgentHandler.py
src/Application/Tools/: GetRandomSymptomsTool.py  GetRandomSymptomsToolHandler.py
src/Controllers/: ChatController.py
src/Domain/Entities/: Patient.py  PatientSymptom.py  Symptom.py
src/Domain/Factories/: AgentFactory.py  HandlerFactory.py
src/Infrastructure/Cache/: ChatMemoryStore.py  RedisClient.py
src/Infrastructure/Database/: Config.py  Connection.py
src/Infrastructure/Llm/: DefaultLlmProviderResolver.py  GemniLlm.py  OpenAiLlm.py
src/Infrastructure/Repositories/: PatientRepository.py  PatientRepositoryPstgres.py  PatientSymptomRepository.py  PatientSymptomRepositoryPostgres.py  Providers.py  SymptomRepository.py  SymptomRepositoryPostgres.py
src/SharedKernel/Logging/: Logger.py
src/agents/: base_agent.py
src/controllers/: chat_controller.py
src/handlers/: base_handler.py
tests/: disease_disclosure_probe.py  extreme_messages.py  many_requests.py
(+36 files in other folders)
