[project]
name = "appointment-chat"
version = "0.1.0"
description = "Meu app de chat"
authors = [
    { name="José Alberto", email="seu_email@example.com" }
]

# TODAS as dependências reais do projeto
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.1",
    "psycopg[binary,pool]",
    "python-dotenv==1.2.1",
    "pydantic==2.10.3",
    "openai==2.7.2",
    "google-genai==1.49.0",
    "aiohttp==3.13.2",
    "colorama==0.4.6",
    "tinycss2==1.4.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
